<resources>
    <string name="app_name">nICE</string>

    <string name="title_activity_main">nICE</string>
    <string name="title_activity_login">Login to nICE</string>

    <!-- BOTTOM NAVIGATION -->
    <string name="bottom_navigation_module_settings">Module Settings</string>
    <string name="bottom_navigation_logs">Logs</string>
    <string name="bottom_navigation_global_settings">Global Settings</string>

    <!-- LOGIN -->
    <string name="label_login_greeting">Welcome to use nICE!</string>
    <string name="label_login_name_hint">l.vader82</string>
    <string name="label_login_pssw_hint">TheDarkSideRules</string>
    <string name="button_login">Login!</string>

    <!-- MODULE SETTINGS -->
    <string name="modules_download_materials">Download materials</string>
    <string name="modules_get_notifications">Get notified of new content</string>
    <string name="modules_add_to_calendar">Add DDLs to calendar</string>

    <!--  PERMISSIONS  -->
    <string name="title_file">Request WRITE_EXTERNAL_STORAGE</string>
    <string name="title_calendar">Request WRITE_CALENDAR</string>
    <string name="confirm_button">Confirm</string>
    <string name="description_file">
        WRITE_EXTERNAL_STORAGE is required with this feature. If you confirm not
        to grant this permission, you can still use this app but cannot
        download files automatically until you grant this permission manually. 
    </string>
    <string name="description_calendar">
        WRITE_CALENDAR is required with this feature. If you confirm not
        to grant this permission, you can still use this app but cannot
        add DDL to calendar until you grant this permission manually.
    </string>
    <string name="profile_description">Profile image received from ICE</string>
    <string name="button_logout">Logout</string>
    <string name="auto_update_message">Auto update every</string>

    <!-- NOTIFICATIONS -->
    <string name="notif_ch_1_dl">Channel 1 Downloads</string>
    <string name="notif_ch_1_desc">Notifications for nICE downloads.</string>
    <string name="notif_ch_2_ddl">Channel 2 Deadlines</string>
    <string name="notif_ch_2_desc">Notifications for nICE deadlines.</string>

</resources>
