<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_module_settings">

    <fragment
        android:id="@+id/navigation_module_settings"
        android:name="com.armpits.nice.ui.home.HomeFragment"
        android:label="@string/bottom_navigation_module_settings"
        tools:layout="@layout/fragment_module_settings" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.armpits.nice.ui.dashboard.DashboardFragment"
        android:label="@string/bottom_navigation_logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/navigation_global_settings"
        android:name="com.armpits.nice.ui.notifications.NotificationsFragment"
        android:label="@string/bottom_navigation_global_settings"
        tools:layout="@layout/fragment_global_settings" />
</navigation>