<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@color/whiteTextBackground"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/chkDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modules_download_materials"
                android:background="@color/lightBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblTitle" />

            <CheckBox
                android:id="@+id/chkNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modules_get_notifications"
                android:background="@color/lightBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chkDownload" />

            <CheckBox
                android:id="@+id/chkCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modules_add_to_calendar"
                android:background="@color/lightBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chkNotifications" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>